tdf#111835: Hide Master slide / close master slide button in notes view

These buttons are designed for normal and master slide view.

Change-Id: Ifc093a1da7e2336a1a83332e893dbc619519aaba
Reviewed-on: https://gerrit.libreoffice.org/44635
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>